WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93020
REGRESSION (tiled scrolling): Full-screen video is broken if page is scrolled
https://bugs.webkit.org/show_bug.cgi?id=93020
Summary
REGRESSION (tiled scrolling): Full-screen video is broken if page is scrolled
Beth Dakin
Reported
2012-08-02 13:14:46 PDT
<
rdar://problem/11629778
> * SUMMARY Full-screen video appears with linen on the bottom, and controls don't work, if the page is scrolled. * STEPS TO REPRODUCE 1. Go to
http://www.apple.com/apple-events/education-january-2012/
2. Scroll down the page some 3. Click the full-screen button in the video controls * RESULTS The video zooms up, but rather than filling the screen, it appears with linen at the bottom of the window equal to the distance down the page that you're scrolled. Controls do not work. Escape will take you back out of full-screen. This bug is not unique to video. It also reproduces with the attached test case following these steps: 1. Make the window small enough so that they test case has a scroll bar 2. Scroll to the bottom. 3. Press the "toggle fixed" button restult-> a bunch of linen shows at the bottom, but it should not.
Attachments
Reduction
(5.87 KB, text/html)
2012-08-02 13:15 PDT
,
Beth Dakin
no flags
Details
Patch
(2.30 KB, patch)
2012-08-02 13:21 PDT
,
Beth Dakin
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2012-08-02 13:15:41 PDT
Created
attachment 156148
[details]
Reduction
Beth Dakin
Comment 2
2012-08-02 13:21:43 PDT
Created
attachment 156149
[details]
Patch
Anders Carlsson
Comment 3
2012-08-02 13:28:48 PDT
Comment on
attachment 156149
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=156149&action=review
> Source/WebCore/page/scrolling/ScrollingCoordinator.cpp:419 > + // at this point. So we'll upate it before we switch back to main thread scrolling
Typo, 'upate'.
Beth Dakin
Comment 4
2012-08-02 13:30:47 PDT
Thanks Anders! Committed
http://trac.webkit.org/changeset/124489
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug